# ScanMePHP

./: .gitignore  AGENTS.md  BENCHMARK.md  CHANGELOG.md  LICENSE  OPTIMIZATION_RESULTS.md  README.md  composer.json  phpunit.xml
.github/workflows/: ci.yml  release-build.yml
bench/: benchmark_all.php  benchmark_encoder.php  benchmark_render.php
clib/: CMakeLists.txt
clib/include/: scanme_qr.h
clib/src/: encoder.cpp  encoder.hpp  mask.cpp  mask.hpp  matrix.cpp  matrix.hpp  reed_solomon.cpp  reed_solomon.hpp  tables.hpp
clib/src/simd/: cpuid.hpp  penalty_avx2.cpp  penalty_avx512.cpp  penalty_neon.cpp  penalty_scalar.cpp  penalty_sse2.cpp  penalty_sse42.cpp  row3.hpp  row3_avx2.hpp  row3_neon.hpp  row3_sse2.hpp
clib/tests/: CMakeLists.txt  test_csv_fixtures.cpp  test_encoder.cpp
docs/plans/: 2026-03-16-multi-renderer.md  2026-03-16-png-renderer.md
examples/: ascii_fullblocks.php  ascii_halfblocks.php  ascii_simple.php  benchmark.php  benchmark_all_1773655146.json  benchmark_all_1773655231.json  benchmark_render.php  benchmark_render_all_1773655244.json  benchmark_svg_1773655140.json  html_div.php  html_table.php  png_example.php  svg_example.php
examples/generated-assets/: qrcode_div.html  qrcode_div_full.html  qrcode_div_inverted.html  qrcode_div_label.html  qrcode_fullblocks.txt  qrcode_halfblocks.txt  qrcode_simple.txt  qrcode_table.html  qrcode_table_full.html  qrcode_table_inverted.html  qrcode_table_label.html
php-ext/: .gitignore  config.m4  native_encoder.c  native_encoder.h  php_scanme_qr.h  scanme_qr.c
src/: BinaryDownloader.php  Builder.php  ChecksumManager.php  Encoder.php  EncoderInterface.php  ErrorCorrectionLevel.php  FastEncoder.php  FfiEncoder.php  Matrix.php  ModuleStyle.php  NativeEncoder.php  PlatformDetector.php  QRCode.php  QRCodeConfig.php  RenderOptions.php  RendererInterface.php
src/Composer/: InstallScript.php  Plugin.php
src/Encoding/: DataAnalyzer.php  DataEncoder.php  MaskSelector.php  MatrixBuilder.php  Mode.php  ReedSolomon.php
src/Exception/: DataTooLargeException.php  DownloadException.php  FileWriteException.php  InvalidConfigurationException.php  InvalidDataException.php  RenderException.php
src/Renderer/: AbstractAsciiRenderer.php  FullBlocksRenderer.php  HalfBlocksRenderer.php  HtmlDivRenderer.php  HtmlTableRenderer.php  PngEncoder.php  PngRenderer.php  SimpleRenderer.php  SvgRenderer.php
src/ffi/: scanme_qr.h
tests/: AsciiQuietZoneTest.php  BinaryDownloaderTest.php  BuilderTest.php  ChecksumManagerTest.php  FfiEncoderTest.php  PlatformDetectorTest.php  PngRendererTest.php  QRCodeTest.php  QrReferenceTest.php
tests/Composer/: InstallScriptTest.php
tests/Integration/: BinaryDownloadIntegrationTest.php
tests/fixtures/: qr_reference.csv  urls.txt
